Complete Sprint 3 (GitHub Integration)
   - Add 13 data models: Repository, Collaborator, RepositoryCollaborator,
     Branch, Commit, PullRequest, CodeReview, Issue, Comment, Notification,
     CloneTracker, FileAnalysis, FunctionAnalysis
   - Create services package with hybrid fetch architecture:
     - CloneService: Git clone + commit extraction via GitPython
     - GitHubAPIClient: Async httpx client with rate limiting
     - AnalysisService: Lizard + Complexipy code analysis
     - FetchOrchestrator: Parallel clone/API coordination
     - CleanupService: Orphaned clone directory cleanup
   - Add Celery task for background repository processing
   - Implement SSE endpoint for real-time fetch progress
   - Add Excel upload support for batch repo URLs
   - Add cleanup signal on user login
   - Configure CLONE_WORKERS, API_CONCURRENCY, RATE_LIMIT_THRESHOLD settings

   Closes #26-48

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,10 @@ dependencies = [
 
     # Code Analysis
     "lizard>=1.17",
+    "complexipy>=0.4",
+
+    # Git Operations
+    "gitpython>=3.1",
 
     # CLI
     "rich>=13.9",
